@@ -1,3 +1,8 @@
+2005-09-13  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/23842
+	* g++.dg/template/access16.C: New test.
+
 2005-09-12  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/23841
